Embed GH release link in release notes (#205)
* Embed GH release link in release notes

Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/docs/release-notes/v1.24.X.md
+++ b/docs/release-notes/v1.24.X.md
@@ -31,7 +31,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
-## Release v1.24.17+k3s1
+## Release [v1.24.17+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.17+k3s1)
 <!-- v1.24.17+k3s1 -->
 This release updates Kubernetes to v1.24.17, and fixes a number of issues.
 
@@ -68,7 +68,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Add RWMutex to address controller [(#8276)](https://github.com/k3s-io/k3s/pull/8276)
 
 -----
-## Release v1.24.16+k3s1
+## Release [v1.24.16+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.16+k3s1)
 <!-- v1.24.16+k3s1 -->
 
 This release updates Kubernetes to v1.24.16, and fixes a number of issues.
@@ -93,7 +93,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.24.16 [(#8023)](https://github.com/k3s-io/k3s/pull/8023)
 
 -----
-## Release v1.24.15+k3s1
+## Release [v1.24.15+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.15+k3s1)
 <!-- v1.24.15+k3s1 -->
 This release updates Kubernetes to v1.24.15, and fixes a number of issues.
 
@@ -120,7 +120,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update Kubernetes to v1.24.15 [(#7785)](https://github.com/k3s-io/k3s/pull/7785)
 
 -----
-## Release v1.24.14+k3s1
+## Release [v1.24.14+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.14+k3s1)
 <!-- v1.24.14+k3s1 -->
 This release updates Kubernetes to v1.24.14, and fixes a number of issues.
 
@@ -158,7 +158,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.24.14-k3s1 [(#7577)](https://github.com/k3s-io/k3s/pull/7577)
 
 -----
-## Release v1.24.13+k3s1
+## Release [v1.24.13+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.13+k3s1)
 <!-- v1.24.13+k3s1 -->
 This release updates Kubernetes to v1.24.13, and fixes a number of issues.
 
@@ -183,7 +183,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.24.13-k3s1 [(#7284)](https://github.com/k3s-io/k3s/pull/7284)
 
 -----
-## Release v1.24.12+k3s1
+## Release [v1.24.12+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.12+k3s1)
 <!-- v1.24.12+k3s1 -->
 This release updates Kubernetes to v1.24.12, and fixes a number of issues.
 
@@ -202,7 +202,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.24.12-k3s1 [(#7105)](https://github.com/k3s-io/k3s/pull/7105)
 
 -----
-## Release v1.24.11+k3s1
+## Release [v1.24.11+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.11+k3s1)
 <!-- v1.24.11+k3s1 -->
 This release updates Kubernetes to v1.24.11, and fixes a number of issues.
 
@@ -244,7 +244,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.24.11-k3s1 [(#7009)](https://github.com/k3s-io/k3s/pull/7009)
 
 -----
-## Release v1.24.10+k3s1
+## Release [v1.24.10+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.10+k3s1)
 <!-- v1.24.10+k3s1 -->
 
 This release updates Kubernetes to v1.24.10+k3s1, and fixes a number of issues.
@@ -260,7 +260,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Bump action/download-artifact to v3 [(#6748)](https://github.com/k3s-io/k3s/pull/6748)
 
 -----
-## Release v1.24.9+k3s2
+## Release [v1.24.9+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.24.9+k3s2)
 <!-- v1.24.9+k3s2 -->
 
 This release updates containerd to v1.6.14 to resolve an issue where pods would lose their CNI information when containerd was restarted.
@@ -272,7 +272,7 @@ This release updates containerd to v1.6.14 to resolve an issue where pods would 
   * The embedded containerd version has been bumped to v1.6.14-k3s1. This includes a backported fix for [containerd/7843](https://github.com/containerd/containerd/issues/7843) which caused pods to lose their CNI info when containerd was restarted, which in turn caused the kubelet to recreate the pod.
 
 -----
-## Release v1.24.9+k3s1
+## Release [v1.24.9+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.9+k3s1)
 <!-- v1.24.9+k3s1 -->
 
 > ## ⚠️ WARNING
@@ -310,7 +310,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Preload iptable_filter/ip6table_filter [(#6647)](https://github.com/k3s-io/k3s/pull/6647)
 
 -----
-## Release v1.24.8+k3s1
+## Release [v1.24.8+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.8+k3s1)
 <!-- v1.24.8+k3s1 -->
 This release updates Kubernetes to v1.24.8, and fixes a number of issues.
 
@@ -350,7 +350,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Move traefik chart repo again [(#6509)](https://github.com/k3s-io/k3s/pull/6509)
 
 -----
-## Release v1.24.7+k3s1
+## Release [v1.24.7+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.7+k3s1)
 <!-- v1.24.7+k3s1 -->
 This release updates Kubernetes to v1.24.7, and fixes a number of issues.
 
@@ -379,7 +379,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
   * This is meant for use with distributed clusters that are not all on the same local network.
 
 -----
-## Release v1.24.6+k3s1
+## Release [v1.24.6+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.6+k3s1)
 <!-- v1.24.6+k3s1 -->
 This release updates Kubernetes to v1.24.6, and fixes a number of issues.
 
@@ -403,7 +403,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.24.6-k3s1 [(#6164)](https://github.com/k3s-io/k3s/pull/6164)
 
 -----
-## Release v1.24.4+k3s1
+## Release [v1.24.4+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.4+k3s1)
 <!-- v1.24.4+k3s1 -->
 This release updates Kubernetes to v1.24.4, and fixes a number of issues.
 
@@ -444,7 +444,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.24.4 [(#6014)](https://github.com/k3s-io/k3s/pull/6014)
 
 -----
-## Release v1.24.3+k3s1
+## Release [v1.24.3+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.3+k3s1)
 <!-- v1.24.3+k3s1 -->
 This release updates Kubernetes to v1.24.3, and fixes a number of issues.
 
@@ -468,7 +468,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.24.3 [(#5870)](https://github.com/k3s-io/k3s/pull/5870)
 
 -----
-## Release v1.24.2+k3s2
+## Release [v1.24.2+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.24.2+k3s2)
 <!-- v1.24.2+k3s2 -->
 This fixes several issues in the v1.24.2+k3s1 and prior releases.
 
@@ -481,7 +481,7 @@ This fixes several issues in the v1.24.2+k3s1 and prior releases.
 * Remove go-powershell dead dependency ([#5777](https://github.com/k3s-io/k3s/pull/5777))
 
 -----
-## Release v1.24.2+k3s1
+## Release [v1.24.2+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.2+k3s1)
 <!-- v1.24.2+k3s1 -->
 This release updates Kubernetes to v1.24.2, and fixes a number of issues.
 
@@ -511,7 +511,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.24.2 [(#5749)](https://github.com/k3s-io/k3s/pull/5749)
 
 -----
-## Release v1.24.1+k3s1
+## Release [v1.24.1+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.24.1+k3s1)
 <!-- v1.24.1+k3s1 -->
 This release updates Kubernetes to v1.24.1, and fixes a number of issues.
 
