--- a/docs/release-notes/v1.26.X.md
+++ b/docs/release-notes/v1.26.X.md
@@ -26,7 +26,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
-## Release v1.26.10+k3s2
+## Release [v1.26.10+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.26.10+k3s2)
 <!-- v1.26.10+k3s2 -->
 
 This release updates Kubernetes to v1.26.10, and fixes a number of issues.
@@ -41,7 +41,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update traefik to fix registry value [(#8790)](https://github.com/k3s-io/k3s/pull/8790)
 
 -----
-## Release v1.26.10+k3s1
+## Release [v1.26.10+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.10+k3s1)
 <!-- v1.26.10+k3s1 -->
 
 This release updates Kubernetes to v1.26.10, and fixes a number of issues.
@@ -59,7 +59,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Added error when cluster reset while using server flag [(#8456)](https://github.com/k3s-io/k3s/pull/8456)
   * The user will receive a error when --cluster-reset with the --server flag
 * Cluster reset from non bootstrap nodes [(#8453)](https://github.com/k3s-io/k3s/pull/8453)
-* Fix spellcheck problem (bootstrap ==> bootstrap) [(#8510)](https://github.com/k3s-io/k3s/pull/8510)
+* Fix spellcheck problem [(#8510)](https://github.com/k3s-io/k3s/pull/8510)
 * Take IPFamily precedence based on order [(#8505)](https://github.com/k3s-io/k3s/pull/8505)
 * Network defaults are duplicated, remove one [(#8552)](https://github.com/k3s-io/k3s/pull/8552)
 * Advertise address integration test [(#8517)](https://github.com/k3s-io/k3s/pull/8517)
@@ -85,7 +85,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Fix s3 snapshot restore [(#8734)](https://github.com/k3s-io/k3s/pull/8734)
 
 -----
-## Release v1.26.9+k3s1
+## Release [v1.26.9+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.9+k3s1)
 <!-- v1.26.9+k3s1 -->
 
 This release updates Kubernetes to v1.26.9, and fixes a number of issues.
@@ -102,7 +102,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
   * Fixed CI failures due to changes to api discovery changes in Kubernetes 1.28
 
 -----
-## Release v1.26.8+k3s1
+## Release [v1.26.8+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.8+k3s1)
 <!-- v1.26.8+k3s1 -->
 This release updates Kubernetes to v1.26.8, and fixes a number of issues.
 
@@ -139,7 +139,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Add RWMutex to address controller [(#8274)](https://github.com/k3s-io/k3s/pull/8274)
 
 -----
-## Release v1.26.7+k3s1
+## Release [v1.26.7+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.7+k3s1)
 <!-- v1.26.7+k3s1 -->
 
 This release updates Kubernetes to v1.26.7, and fixes a number of issues.
@@ -167,7 +167,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.26.7 [(#8022)](https://github.com/k3s-io/k3s/pull/8022)
 ​
 -----
-## Release v1.26.6+k3s1
+## Release [v1.26.6+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.6+k3s1)
 <!-- v1.26.6+k3s1 -->
 This release updates Kubernetes to v1.26.6, and fixes a number of issues.
 
@@ -200,7 +200,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update Kubernetes to v1.26.6 [(#7789)](https://github.com/k3s-io/k3s/pull/7789)
 
 -----
-## Release v1.26.5+k3s1
+## Release [v1.26.5+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.5+k3s1)
 <!-- v1.26.5+k3s1 -->
 This release updates Kubernetes to v1.26.5, and fixes a number of issues.
 
@@ -243,7 +243,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Pin emicklei/go-restful to v3.9.0 [(#7598)](https://github.com/k3s-io/k3s/pull/7598)
 
 -----
-## Release v1.26.4+k3s1
+## Release [v1.26.4+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.4+k3s1)
 <!-- v1.26.4+k3s1 -->
 This release updates Kubernetes to v1.26.4, and fixes a number of issues.
 
@@ -290,7 +290,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Bump Trivy version [(#7257)](https://github.com/k3s-io/k3s/pull/7257)
 
 -----
-## Release v1.26.3+k3s1
+## Release [v1.26.3+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.3+k3s1)
 <!-- v1.26.3+k3s1 -->
 This release updates Kubernetes to v1.26.3, and fixes a number of issues.
 
@@ -323,7 +323,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update flannel to fix NAT issue with old iptables version [(#7136)](https://github.com/k3s-io/k3s/pull/7136)
 
 -----
-## Release v1.26.2+k3s1
+## Release [v1.26.2+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.2+k3s1)
 <!-- v1.26.2+k3s1 -->
 This release updates Kubernetes to v1.26.2, and fixes a number of issues.
 
@@ -373,7 +373,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.26.2-k3s1 [(#7011)](https://github.com/k3s-io/k3s/pull/7011)
 
 -----
-## Release v1.26.1+k3s1
+## Release [v1.26.1+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.1+k3s1)
 <!-- v1.26.1+k3s1 -->
 This release updates Kubernetes to v1.26.1, and fixes a number of issues.
 
@@ -405,7 +405,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.26.1-k3s1 [(#6774)](https://github.com/k3s-io/k3s/pull/6774)
 
 -----
-## Release v1.26.0+k3s2
+## Release [v1.26.0+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.26.0+k3s2)
 <!-- v1.26.0+k3s2 -->
 
 This release updates containerd to v1.6.14 to resolve an issue where pods would lose their CNI information when containerd was restarted, as well as a number of other stability and administrative changes.
@@ -425,7 +425,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 * Exclude December r1 releases from channel server [(#6706)](https://github.com/k3s-io/k3s/pull/6706)
 
 -----
-## Release v1.26.0+k3s1
+## Release [v1.26.0+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.0+k3s1)
 <!-- v1.26.0+k3s1 -->
 
 > ## ⚠️ WARNING
