--- a/docs/release-notes/v1.25.X.md
+++ b/docs/release-notes/v1.25.X.md
@@ -30,7 +30,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
-## Release v1.25.15+k3s2
+## Release [v1.25.15+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.25.15+k3s2)
 <!-- v1.25.15+k3s2 -->
 
 This release updates Kubernetes to v1.25.15, and fixes a number of issues.
@@ -46,7 +46,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update traefik to fix registry value [(#8791)](https://github.com/k3s-io/k3s/pull/8791)
 
 -----
-## Release v1.25.15+k3s1
+## Release [v1.25.15+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.15+k3s1)
 <!-- v1.25.15+k3s1 -->
 
 This release updates Kubernetes to v1.25.15, and fixes a number of issues.
@@ -64,7 +64,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Added error when cluster reset while using server flag [(#8457)](https://github.com/k3s-io/k3s/pull/8457)
   * The user will receive a error when --cluster-reset with the --server flag
 * Cluster reset from non bootstrap nodes [(#8454)](https://github.com/k3s-io/k3s/pull/8454)
-* Fix spellcheck problem (bootstrap ==> bootstrap) [(#8511)](https://github.com/k3s-io/k3s/pull/8511)
+* Fix spellcheck problem [(#8511)](https://github.com/k3s-io/k3s/pull/8511)
 * Take IPFamily precedence based on order [(#8506)](https://github.com/k3s-io/k3s/pull/8506)
 * Network defaults are duplicated, remove one [(#8553)](https://github.com/k3s-io/k3s/pull/8553)
 * Advertise address integration test [(#8518)](https://github.com/k3s-io/k3s/pull/8518)
@@ -88,7 +88,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Fix s3 snapshot restore [(#8735)](https://github.com/k3s-io/k3s/pull/8735)
 
 -----
-## Release v1.25.14+k3s1
+## Release [v1.25.14+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.14+k3s1)
 <!-- v1.25.14+k3s1 -->
 
 This release updates Kubernetes to v1.25.14, and fixes a number of issues.
@@ -106,7 +106,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
   * Fixed CI failures due to changes to api discovery changes in Kubernetes 1.28
 
 -----
-## Release v1.25.13+k3s1
+## Release [v1.25.13+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.13+k3s1)
 <!-- v1.25.13+k3s1 -->
 This release updates Kubernetes to v1.25.13, and fixes a number of issues.
 
@@ -143,7 +143,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Add RWMutex to address controller [(#8275)](https://github.com/k3s-io/k3s/pull/8275)
 
 -----
-## Release v1.25.12+k3s1
+## Release [v1.25.12+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.12+k3s1)
 <!-- v1.25.12+k3s1 -->
 This release updates Kubernetes to v1.25.12, and fixes a number of issues.    
 ​
@@ -170,7 +170,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.25.12 [(#8021)](https://github.com/k3s-io/k3s/pull/8021)
 ​
 -----
-## Release v1.25.11+k3s1
+## Release [v1.25.11+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.11+k3s1)
 <!-- v1.25.11+k3s1 -->
 This release updates Kubernetes to v1.25.11, and fixes a number of issues.
 
@@ -203,7 +203,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Path normalization affecting kubectl proxy conformance test for /api endpoint [(#7818)](https://github.com/k3s-io/k3s/pull/7818)
 
 -----
-## Release v1.25.10+k3s1
+## Release [v1.25.10+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.10+k3s1)
 <!-- v1.25.10+k3s1 -->
 This release updates Kubernetes to v1.25.10, and fixes a number of issues.
 
@@ -243,7 +243,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.25.10-k3s1 [(#7582)](https://github.com/k3s-io/k3s/pull/7582)
 
 -----
-## Release v1.25.9+k3s1
+## Release [v1.25.9+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.9+k3s1)
 <!-- v1.25.9+k3s1 -->
 This release updates Kubernetes to v1.25.9, and fixes a number of issues.
 
@@ -268,7 +268,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.25.9-k3s1 [(#7283)](https://github.com/k3s-io/k3s/pull/7283)
 
 -----
-## Release v1.25.8+k3s1
+## Release [v1.25.8+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.8+k3s1)
 <!-- v1.25.8+k3s1 -->
 This release updates Kubernetes to v1.25.8, and fixes a number of issues.
 
@@ -288,7 +288,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update flannel to fix NAT issue with old iptables version [(#7138)](https://github.com/k3s-io/k3s/pull/7138)
 
 -----
-## Release v1.25.7+k3s1
+## Release [v1.25.7+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.7+k3s1)
 <!-- v1.25.7+k3s1 -->
 This release updates Kubernetes to v1.25.7, and fixes a number of issues.
 
@@ -330,7 +330,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.25.7-k3s1 [(#7010)](https://github.com/k3s-io/k3s/pull/7010)
 
 -----
-## Release v1.25.6+k3s1
+## Release [v1.25.6+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.6+k3s1)
 <!-- v1.25.6+k3s1 -->
 This release updates Kubernetes to v1.25.6, and fixes a number of issues.
 
@@ -348,7 +348,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.25.6+k3s1 [(#6775)](https://github.com/k3s-io/k3s/pull/6775)
 
 -----
-## Release v1.25.5+k3s2
+## Release [v1.25.5+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.25.5+k3s2)
 <!-- v1.25.5+k3s2 -->
 
 This release updates containerd to v1.6.14 to resolve an issue where pods would lose their CNI information when containerd was restarted.
@@ -359,7 +359,7 @@ This release updates containerd to v1.6.14 to resolve an issue where pods would 
   * The embedded containerd version has been bumped to v1.6.14-k3s1. This includes a backported fix for [containerd/7843](https://github.com/containerd/containerd/issues/7843) which caused pods to lose their CNI info when containerd was restarted, which in turn caused the kubelet to recreate the pod.
 
 -----
-## Release v1.25.5+k3s1
+## Release [v1.25.5+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.5+k3s1)
 <!-- v1.25.5+k3s1 -->
 
 > ## ⚠️ WARNING
@@ -412,7 +412,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Preload iptable_filter/ip6table_filter [(#6646)](https://github.com/k3s-io/k3s/pull/6646)
 
 -----
-## Release v1.25.4+k3s1
+## Release [v1.25.4+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.4+k3s1)
 <!-- v1.25.4+k3s1 -->
 This release updates Kubernetes to v1.25.4, and fixes a number of issues.
 
@@ -465,7 +465,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Move traefik chart repo again [(#6508)](https://github.com/k3s-io/k3s/pull/6508)
 
 -----
-## Release v1.25.3+k3s1
+## Release [v1.25.3+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.3+k3s1)
 <!-- v1.25.3+k3s1 -->
 This release updates Kubernetes to v1.25.3, and fixes a number of issues.
 
@@ -499,7 +499,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
   * This is meant for use with distributed clusters that are not all on the same local network.
 
 -----
-## Release v1.25.2+k3s1
+## Release [v1.25.2+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.2+k3s1)
 <!-- v1.25.2+k3s1 -->
 This release updates Kubernetes to v1.25.2, and fixes a number of issues.
 
@@ -514,7 +514,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.25.2-k3s1 [(#6168)](https://github.com/k3s-io/k3s/pull/6168)
 
 -----
-## Release v1.25.0+k3s1
+## Release [v1.25.0+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.25.0+k3s1)
 <!-- v1.25.0+k3s1 -->
 This release is K3S's first in the v1.25 line. This release updates Kubernetes to v1.25.0.
 
