--- a/docs/release-notes/v1.27.X.md
+++ b/docs/release-notes/v1.27.X.md
@@ -21,7 +21,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
-## Release v1.27.7+k3s2
+## Release [v1.27.7+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.27.7+k3s2)
 <!-- v1.27.7+k3s2 -->
 
 This release updates Kubernetes to v1.27.7, and fixes a number of issues.
@@ -36,7 +36,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update traefik to fix registry value [(#8789)](https://github.com/k3s-io/k3s/pull/8789)
 
 -----
-## Release v1.27.7+k3s1
+## Release [v1.27.7+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.27.7+k3s1)
 <!-- v1.27.7+k3s1 -->
 
 This release updates Kubernetes to v1.27.7, and fixes a number of issues.
@@ -54,7 +54,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
   * The user will receive a error when --cluster-reset with the --server flag
 * Cluster reset from non bootstrap nodes [(#8451)](https://github.com/k3s-io/k3s/pull/8451)
 * Take IPFamily precedence based on order [(#8504)](https://github.com/k3s-io/k3s/pull/8504)
-* Fix spellcheck problem (bootstrap ==> bootstrap) [(#8509)](https://github.com/k3s-io/k3s/pull/8509)
+* Fix spellcheck problem [(#8509)](https://github.com/k3s-io/k3s/pull/8509)
 * Network defaults are duplicated, remove one [(#8551)](https://github.com/k3s-io/k3s/pull/8551)
 * Advertise address integration test [(#8516)](https://github.com/k3s-io/k3s/pull/8516)
 * System agent push tags fix [(#8569)](https://github.com/k3s-io/k3s/pull/8569)
@@ -80,7 +80,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Fix s3 snapshot restore [(#8733)](https://github.com/k3s-io/k3s/pull/8733)
 
 -----
-## Release v1.27.6+k3s1
+## Release [v1.27.6+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.27.6+k3s1)
 <!-- v1.27.6+k3s1 -->
 
 This release updates Kubernetes to v1.27.6, and fixes a number of issues.
@@ -97,7 +97,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
   * Fixed CI failures due to changes to api discovery changes in Kubernetes 1.28
 
 -----
-## Release v1.27.5+k3s1
+## Release [v1.27.5+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.27.5+k3s1)
 <!-- v1.27.5+k3s1 -->
 This release updates Kubernetes to v1.27.5, and fixes a number of issues.
 
@@ -160,7 +160,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Add RWMutex to address controller [(#8273)](https://github.com/k3s-io/k3s/pull/8273)
 
 -----
-## Release v1.27.4+k3s1
+## Release [v1.27.4+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.27.4+k3s1)
 <!-- v1.27.4+k3s1 -->
 This release updates Kubernetes to v1.27.4, and fixes a number of issues.    
 ​
@@ -198,7 +198,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update to v1.27.4 [(#8014)](https://github.com/k3s-io/k3s/pull/8014)
 ​
 -----
-## Release v1.27.3+k3s1
+## Release [v1.27.3+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.27.3+k3s1)
 <!-- v1.27.3+k3s1 -->
 This release updates Kubernetes to v1.27.3, and fixes a number of issues.
 
@@ -248,7 +248,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Update Kubernetes to v1.27.3 [(#7790)](https://github.com/k3s-io/k3s/pull/7790)
 
 -----
-## Release v1.27.2+k3s1
+## Release [v1.27.2+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.27.2+k3s1)
 <!-- v1.27.2+k3s1 -->
 This release updates Kubernetes to v1.27.2, and fixes a number of issues.
 
@@ -314,7 +314,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Revert "Add el9 selinux rpm (#7443)" [(#7608)](https://github.com/k3s-io/k3s/pull/7608)
 
 -----
-## Release v1.27.1+k3s1
+## Release [v1.27.1+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.27.1+k3s1)
 <!-- v1.27.1+k3s1 -->
 This release is K3S's first in the v1.27 line. This release updates Kubernetes to v1.27.1.
 
